--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -15,6 +15,14 @@
         <action
             android:id="@+id/action_mainPage_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_mainPage_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_mainPage_to_gamePreparationFragment"
+            app:destination="@id/gamePreparationFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -41,6 +49,9 @@
         <action
             android:id="@+id/action_splashFragment_to_onBoardingFragment"
             app:destination="@id/onBoardingFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_gamePreparationFragment"
+            app:destination="@id/gamePreparationFragment" />
     </fragment>
     <fragment
         android:id="@+id/onBoardingFragment"
@@ -76,6 +87,30 @@
         <action
             android:id="@+id/action_settingsFragment_to_mainPage"
             app:destination="@id/mainPage" />
+    </fragment>
+    <fragment
+        android:id="@+id/gamePreparationFragment"
+        android:name="com.example.bilbakalim.View.Game.NewGame.GamePreparationFragment"
+        android:label="fragment_game_preparation"
+        tools:layout="@layout/fragment_game_preparation" >
+        <action
+            android:id="@+id/action_gamePreparationFragment_to_mainPage"
+            app:destination="@id/mainPage" />
+        <action
+            android:id="@+id/action_gamePreparationFragment_to_gameFragment"
+            app:destination="@id/gameFragment"
+            app:popUpTo="@id/mainPage"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/gameFragment"
+        android:name="com.example.bilbakalim.View.Game.NewGame.GameFragment"
+        android:label="GameFragment" >
+        <action
+            android:id="@+id/action_gameFragment_to_mainPage"
+            app:destination="@id/mainPage"
+            app:popUpTo="@id/mainPage"
+            app:popUpToInclusive="false" />
     </fragment>
 
 </navigation>
