--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-        tools:context=".View.Authentication.RegisterFragment">
+        tools:context=".View.Authentication.LoginFragment">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -18,108 +19,108 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/registerLogo"
+                    android:id="@+id/loginLogo"
                     android:layout_width="200dp"
                     android:layout_height="180dp"
-                    android:layout_marginTop="32dp"
-                    android:contentDescription="@string/registerPageWelcomeMessage"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_margin="32dp"
+                    android:contentDescription="@string/loginpagewelcomemessage"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/transparent_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <TextView
-                    android:id="@+id/registerPageWelcomeMessage"
+                    android:id="@+id/loginPageWelcomeMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@string/registerPageWelcomeMessage"
+                    android:text="@string/loginpagewelcomemessage"
                     android:textSize="30sp"
-                    app:layout_constraintEnd_toEndOf="@+id/registerLogo"
-                    app:layout_constraintStart_toStartOf="@+id/registerLogo"
-                    app:layout_constraintTop_toBottomOf="@+id/registerLogo" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.496"
+                    app:layout_constraintStart_toEndOf="@+id/loginLogo"
+                    app:layout_constraintTop_toTopOf="@+id/loginLogo" />
 
                 <EditText
                     android:id="@+id/emailText"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="36dp"
                     android:layout_marginEnd="16dp"
                     android:autofillHints="emailAddress"
                     android:ems="10"
-                    android:hint="@string/emailRegister"
+                    android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/registerPageWelcomeMessage" />
-
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/loginLogo"
+                    app:layout_constraintTop_toBottomOf="@+id/loginPageWelcomeMessage" />
 
                 <EditText
-                    android:id="@+id/passwordRegister"
+                    android:id="@+id/passwordLogin"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="32dp"
                     android:autofillHints="password"
                     android:ems="10"
-                    android:hint="@string/passwordRegister"
+                    android:hint="@string/passwordLogin"
                     android:inputType="textPassword"
                     app:layout_constraintEnd_toEndOf="@+id/emailText"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/emailText"
                     app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
-                <EditText
-                    android:id="@+id/passwordCheckRegister"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="16dp"
-                    android:ems="10"
-                    android:hint="@string/passwordAgain"
-                    android:inputType="textPassword"
-                    app:layout_constraintEnd_toEndOf="@+id/passwordRegister"
-                    app:layout_constraintStart_toStartOf="@+id/passwordRegister"
-                    app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />
+                <TextView
+                    android:id="@+id/forgotPasswordTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:text="@string/forgotPassword"
+                    app:drawableLeftCompat="@drawable/ic_lock"
+                    app:layout_constraintEnd_toStartOf="@id/emailText"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/loginLogo" />
 
+
+                <TextView
+                    android:id="@+id/signUpTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/loginPageSignUpText"
+                    app:drawableLeftCompat="@drawable/ic_person_add"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/forgotPasswordTextView"
+                    app:layout_constraintStart_toStartOf="@id/forgotPasswordTextView"
+                    app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />
 
                 <Button
-                    android:id="@+id/signUpButton"
+                    android:id="@+id/sign_inButton"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
-                    android:text="@string/signUp"
+                    android:layout_marginTop="24dp"
+                    android:text="@string/signIn"
                     android:textAllCaps="false"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/goBackBtn"
-                    app:layout_constraintTop_toTopOf="@+id/goBackBtn" />
+                    app:layout_constraintStart_toEndOf="@+id/signUpTextView"
+                    app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />
 
-                <Button
-                    android:id="@+id/goBackBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="32dp"
-                    android:text="@string/goBack"
-                    android:textAllCaps="false"
-                    app:layout_constraintEnd_toStartOf="@+id/signUpButton"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/passwordCheckRegister" />
 
                 <ProgressBar
-                    android:id="@+id/registerProgressBar"
+                    android:id="@+id/loginProgressBar"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.58"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-                <!--android:indeterminateTint="@color/"-->
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.58" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
