--- a/app/src/main/res/layout-land/fragment_main_page.xml
+++ b/app/src/main/res/layout-land/fragment_main_page.xml
@@ -21,10 +21,9 @@
                     android:id="@+id/MainPageTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:layout_marginTop="108dp"
+                    android:layout_marginTop="72dp"
                     android:fontFamily="@font/mtcorsiva"
                     android:gravity="center"
-
                     android:text="@string/app_name"
                     android:textSize="72sp"
                     android:textStyle="bold"
@@ -36,41 +35,42 @@
                     android:id="@+id/newGameBtn"
                     android:layout_width="0dp"
                     android:layout_height="72dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_margin="32dp"
                     android:text="@string/newGame"
-                    app:layout_constraintEnd_toEndOf="@id/MainPageTitle"
-                    app:layout_constraintStart_toStartOf="@id/MainPageTitle"
+                    app:layout_constraintEnd_toStartOf="@id/settingsBtn"
+                    android:padding="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/MainPageTitle" />
 
                 <Button
                     android:id="@+id/settingsBtn"
                     android:layout_width="0dp"
                     android:layout_height="72dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="32dp"
                     android:text="@string/settings"
-                    app:layout_constraintEnd_toEndOf="@id/newGameBtn"
-                    app:layout_constraintStart_toStartOf="@id/newGameBtn"
-                    app:layout_constraintTop_toBottomOf="@id/newGameBtn" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/newGameBtn"
+                    app:layout_constraintTop_toTopOf="@id/newGameBtn" />
 
                 <Button
                     android:id="@+id/addWordBtn"
                     android:layout_width="0dp"
                     android:layout_height="72dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_margin="32dp"
                     android:text="@string/addWord"
-                    app:layout_constraintEnd_toEndOf="@id/settingsBtn"
-                    app:layout_constraintStart_toStartOf="@id/settingsBtn"
+                    app:layout_constraintEnd_toStartOf="@id/quitGameBtn"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/settingsBtn" />
 
                 <Button
                     android:id="@+id/quitGameBtn"
                     android:layout_width="0dp"
                     android:layout_height="72dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="32dp"
                     android:text="@string/quit"
-                    app:layout_constraintEnd_toEndOf="@id/settingsBtn"
-                    app:layout_constraintStart_toStartOf="@id/settingsBtn"
-                    app:layout_constraintTop_toBottomOf="@id/addWordBtn" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/addWordBtn"
+                    app:layout_constraintTop_toTopOf="@id/addWordBtn" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
