--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -21,9 +21,10 @@
                     android:id="@+id/registerLogo"
                     android:layout_width="200dp"
                     android:layout_height="180dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_margin="32dp"
                     android:contentDescription="@string/registerPageWelcomeMessage"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/goBackBtn"
+                    app:layout_constraintEnd_toStartOf="@id/emailText"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/transparent_icon"
@@ -33,12 +34,12 @@
                     android:id="@+id/registerPageWelcomeMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="48dp"
                     android:text="@string/registerPageWelcomeMessage"
                     android:textSize="30sp"
-                    app:layout_constraintEnd_toEndOf="@+id/registerLogo"
-                    app:layout_constraintStart_toStartOf="@+id/registerLogo"
-                    app:layout_constraintTop_toBottomOf="@+id/registerLogo" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/registerLogo"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
                     android:id="@+id/emailText"
@@ -52,7 +53,7 @@
                     android:hint="@string/emailRegister"
                     android:inputType="textEmailAddress"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/registerLogo"
                     app:layout_constraintTop_toBottomOf="@+id/registerPageWelcomeMessage" />
 
 
@@ -115,7 +116,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-                <!--android:indeterminateTint="@color/"-->
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
