--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BilBakalım" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BilBakalım" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/madder_lake_red</item>
+        <item name="colorPrimaryVariant">@color/raisin_black</item>
+        <item name="colorOnPrimary">@color/green</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:colorForeground">@color/cyan_process_blue</item>
+        <item name="android:textColorHint">@color/cyan_process_blue</item>
         <!-- Customize your theme here. -->
+
+        <item name="colorAccent">#0091BC</item>
+
+        <item name="android:textColor">@color/green</item>
+        <item name="android:indeterminateTint">@color/cyan_process_blue</item>
     </style>
 </resources>
